--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     },
     "dependencies": {
         "express": "^4.18.1",
+        "express-async-handler": "^1.2.0",
         "typescript": "^4.7.3"
     },
     "devDependencies": {
