--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
     },
     "devDependencies": {
         "@types/express": "^4.17.13",
-        "nodemon": "^2.0.16"
+        "nodemon": "^2.0.16",
+        "sqlite": "^4.1.1",
+        "sqlite3": "^5.0.8"
     }
 }
