--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
     "main": "index.js",
     "license": "MIT",
     "scripts": {
-        "start": "nodemon index.ts"
+        "start": "nodemon server.ts"
     },
     "dependencies": {
         "express": "^4.18.1",
