--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,11 @@
         "start": "nodemon server.ts"
     },
     "dependencies": {
+        "@types/jsonwebtoken": "^8.5.8",
+        "dotenv": "^16.0.1",
         "express": "^4.18.1",
         "express-async-handler": "^1.2.0",
+        "jsonwebtoken": "^8.5.1",
         "typescript": "^4.7.3"
     },
     "devDependencies": {
