--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,10 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Deploy and restart server
+        env:
+          JWT_SECRET: ${{secrets.JWT_SECRET}}
+          PASSWORD_SALT: ${{secrets.PASSWORD_SALT}}
         run: |
           cd server
           yarn
-          PORT=80 JWT_SECRET=1122334455 PASSWORD_SALT=secretsalt ENV=production yarn start:prod
+          PORT=80 ENV=production yarn start:prod
